fixed weird clipping seen on android

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ a::after {
 html,
 body,
 #root {
-  min-height: 100vh;
+  min-height: 100dvh;
   width: 100%;
 }
 
@@ -97,7 +97,7 @@ body,
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   filter: blur(2px);
   z-index: -2;
