--- a/src/paths/map/Map.css
+++ b/src/paths/map/Map.css
@@ -1,6 +1,6 @@
 .map {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   left: 0;
   top: 0;
   position: absolute;
@@ -19,7 +19,7 @@
 .mapHolder {
   display: flex;
   width: 100%;
-  height: calc(100vh - 48px);
+  height: calc(100dvh - 48px);
   padding: 0;
   margin: 0;
   overflow: hidden;
